[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resurses/UserInterfase/UI-Scenes/GameGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Fon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Floar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 6
fog_enabled = true
dof_blur_far_enabled = true
dof_blur_near_enabled = true
glow_enabled = true
adjustment_enabled = true

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Fon" parent="." instance=ExtResource( 2 )]
offset = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 1, 1 )

[node name="Spawner" type="Position2D" parent="."]
position = Vector2( 74, 18 )
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Spawner"]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 263, 133 )

[node name="Floar" parent="." instance=ExtResource( 4 )]
position = Vector2( 263, 303 )
collision_mask = 0
FTargetPath = NodePath("../Player")

[node name="Camera2D" type="Camera2D" parent="Floar"]
position = Vector2( 342, -293 )
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="TochkaSpavna" type="Position2D" parent="Floar"]
position = Vector2( 1093, -17 )

[node name="ZTochkaSpavna" type="Position2D" parent="Floar"]
position = Vector2( 1093, -170 )

[node name="GUI" parent="." instance=ExtResource( 1 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
